--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Token Checker</title>
+    <meta property="og:title" content="Discord Token Checker">
+    <meta property="og:description" content="Discord token'ınızı kontrol edin ve bilgilerinizi görüntüleyin.">
+    <meta name="theme-color" content="#4CAF50">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,6 +25,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 600px;
+            position: relative;
         }
         h1 {
             text-align: center;
@@ -96,10 +100,18 @@
             height: 15px;
             margin-right: 0.5rem;
         }
+        .swench {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-weight: bold;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="swench">swench__</div>
         <h1>Discord Token Checker</h1>
         <input type="text" id="tokenInput" placeholder="Discord Token'ınızı girin">
         <button onclick="checkToken()">Kontrol Et</button>
